# JeuDeLaVie

./: CMakeLists.txt  main.c
SDL2/include/: SDL_messagebox.h
